--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Daily Reporting Marutiflex</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
@@ -137,7 +138,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
       <div class="input-field col s12">
         <i class="material-icons prefix">storage</i>
         <select id="client_cat_val" required  multiple>
-              <?!= Client_Category_data ?>
+              
             </select>
         <label for="client_cat_val">Client Category<samp>* </samp></label>
       </div>
