--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Daily Reporting Marutiflex</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AW3Schools_logo.svg&psig=AOvVaw3w2srGQ_FRZi8GH2_J8mOg&ust=1692268674143000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCJiN0pv-4IADFQAAAAAdAAAAABAH">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
